Change Log:
=============================
- DanbooruDownloader20161122
  - Fix Issue #100: update job numbering.
  - Try Fix Issue #99: memory leak at batch download.

- DanbooruDownloader20161114
  - Fix Issue #97: Use per-job filename format.

- DanbooruDownloader20161112
  - Fix Issue #91: update website url.
  - Implement #96: Add %general% for the filename format.
  - Add colored tag column in download grid.
  - Update tag parser for sankaku.
  - Update tag replacement behaviour for tags exceeding limit to use Over Value.
  - Update tag replacement behaviour for missing tag to always use empty tag replacement.

- DanbooruDownloader20161009
  - Fix path error when do batch download.

- DanbooruDownloader20161008b
  - Implement #87: new filename format %uploadDateTime%.
                   set the DateTime format in settings tab.
  - Update regex to insert xml entity dtd.
  - Update xhtml.ent to include special character and math symbol.

- DanbooruDownloader20161002
  - Fix Issue #60: Handle undefined xml entity.
  - Fix thumbnail resize if thumb size bigger than column size.
  - Implement #86: Shutdown after batch job completed.
  - Add new provider: rule34hentai.net.

- DanbooruDownloader20160816
  - Implement #79: Add option to allow filepath exceeding 260 characters.
  - Implement #80: Create extra text file containing tags.
  - Fix Issue #77: Update provider list.
  - Update readme.txt

- DanbooruDownloader20160117
  - Fix Issue #70: Update url handler for rule34.xxx
  - Fix Issue #68: Update gelbooru tags downloader, need cookie for login.

- DanbooruDownloader20151203
  - Fix Issue #64: Add warning when file exists.
  - Fix Issue #66: Empty folder created for Blacklisted tag when use custom filename.
  - Implement Feature #67: Option to replace underscore in Tag to space
  - Add Context Menu to open downloaded files.
  - Set max width for data grid column to 300px.
  - Add cookie login method for Gelbooru. Deprecate the UseAuth, replace with LoginType.
