@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.2016.11.22")]
-[assembly: AssemblyFileVersion("3.2016.11.22")]
+[assembly: AssemblyVersion("3.2016.12.21")]
+[assembly: AssemblyFileVersion("3.2016.12.21")]
